[gd_scene load_steps=3 format=2]

[ext_resource path="res://entities/captured_cards/captured_cards.gd" type="Script" id=1]
[ext_resource path="res://entities/card_stack/card_stack.tscn" type="PackedScene" id=2]

[node name="CapturedCards" type="Node2D"]
script = ExtResource( 1 )

[node name="LightCards" parent="." instance=ExtResource( 2 )]
separation = Vector2( -20, 5 )
selectable = false

[node name="AnimalCards" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 220 )
separation = Vector2( -20, 5 )
selectable = false

[node name="RibbonCards" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 440 )
separation = Vector2( -20, 5 )
selectable = false

[node name="PlainCards" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 660 )
separation = Vector2( -40, 5 )
selectable = false
